@@ -2,43 +2,28 @@
 
 class Cache
 {
-  protected static $storage = null;
-  
-  public static function setStorage(Sabel_Cache_Interface $storage)
+  public static function create($backend)
   {
-    self::$storage = $storage;
+    if ((ENVIRONMENT & PRODUCTION) > 0) {
+      switch ($backend) {
+      case "file":
+        $storage = Sabel_Cache_File::create(CACHE_DIR_PATH . DS . "data");
+        break;
+      case "apc":
+        $storage = Sabel_Cache_Apc::create();
+        break;
+      case "memcache":
+        $storage = Sabel_Cache_Memcache::create(/* $host = "localhost", $port = 11211 */);
+        // $storage->addServer(/* $host, $port = 11211, $weight = 1 */);
+        break;
+      default:
+        $message = __METHOD__ . "() invalid cache backend.";
+        throw new Exception($message);
+      }
+      
+      return $storage;
+    } else {
+      return Sabel_Cache_Null::create();
+    }
   }
-  
-  public static function getStorage()
-  {
-    return self::$storage;
-  }
-  
-  public static function get($key)
-  {
-    return self::$storage->read($key);
-  }
-  
-  public static function set($key, $value, $timeout = 0)
-  {
-    self::$storage->write($key, $value, $timeout);
-  }
-  
-  public static function delete($key)
-  {
-    self::$storage->delete($key);
-  }
-}
-
-if ((ENVIRONMENT & PRODUCTION) > 0) {
-  // APC
-  // Cache::setStorage(Cache_Apc::create());
-  
-  // Memcache
-  // Cache::setStorage(Cache_Memcache::create("localhost", 11211));
-  
-  // File
-  Cache::setStorage(Cache_File::create(CACHE_DIR_PATH));
-} else {
-  Cache::setStorage(Sabel_Cache_Null::create());
 }
